deploy/manifests/stage/all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: creative-studio-stage
  namespace: creative-studio-stage
spec:
  minReadySeconds: 10
  replicas: 2
  selector:
    matchLabels:
      app: creative-studio-stage
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: creative-studio-stage
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: creative-studio-secrets
        image: demo.goharbor.io/creative-studio/creative-studio@sha256:edd6f736eec4d76af23214bbb7faaa7aaf3c57f8893f3dca1a97aab31c234161
        name: creative-studio-stage
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 400m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - mountPath: /app/data
          name: app-storage
      imagePullSecrets:
      - name: harbor-secret
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: creative-studio-stage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: creative-studio-stage-service
  namespace: creative-studio-stage
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 3000
  selector:
    app: creative-studio-stage
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: creative-studio-stage
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: creative-studio-stage
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
  podSelector:
    matchLabels:
      app: creative-studio-stage
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-creative-studio-ingress
  namespace: creative-studio-stage
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 3000
      protocol: TCP
  podSelector:
    matchLabels:
      app: creative-studio-stage
  policyTypes:
  - Ingress
---
